--- a/index.html
+++ b/index.html
@@ -1,84 +1,92 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- META tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- META tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css">
 
-    <!-- Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Varela" rel="stylesheet">
+  <!-- Google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Varela" rel="stylesheet">
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    <!-- Title -->
-    <title>Wikipedia Viewer</title>
+  <!-- Title -->
+  <title>Wikipedia Viewer</title>
 
 </head>
 
 <body>
-    <div class="container">
-        <div class="col-xs-0 col-md-3"></div>
-        <div class="col-xs-12 col-md-6 text-center">
-            <!-- Logo of wikipedia -->
-            <div class="logo">
-                <img src="https://cdn.images.express.co.uk/img/dynamic/59/590x/Wikipedia-down-850775.jpg" alt="Wikipedia Logo" class="img-responsive">
-            </div>
+  <div class="container">
+    <div class="col-xs-0 col-md-3"></div>
+    <div class="col-xs-12 col-md-6 text-center">
+      <!-- Logo of wikipedia -->
+      <div class="logo">
+        <img src="https://cdn.images.express.co.uk/img/dynamic/59/590x/Wikipedia-down-850775.jpg" alt="Wikipedia Logo" class="img-responsive">
+      </div>
 
-            <!-- Random Article -->
-            <div class="random-article">
-                <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Get me a random article</a>
-            </div>
+      <!-- Random Article -->
+      <div class="random-article">
+        <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Get me a random article</a>
+      </div>
 
-            <!-- Search Box -->
-            <div class="search-box">
-                <input type="text" class="form-control" placeholder="What do you want to search?" id="searchBox">
-            </div>
+      <!-- Search Box -->
+      <div class="search-box">
+        <input type="text" class="form-control" placeholder="What do you want to search?" id="searchBox">
+      </div>
 
-            <!-- Search button -->
-            <div class="search-button">
-                <button class="btn btn-primary" id="searchButton">
-                    Search
-                </button>
-            </div>
+      <!-- Search button -->
+      <div class="search-button">
+        <button class="btn btn-primary" id="searchButton">
+          Search
+        </button>
+      </div>
 
-        </div>
-        <div class="col-xs-0 col-md-3"></div>
     </div>
+    <div class="col-xs-0 col-md-3"></div>
+  </div>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-0 col-md-1"></div>
-            <div class="col-xs-12 col-md-10">
-                <div class="search-result">
-                    <ul>
-                        <li id='0'></li>
-                        <li id='1'></li>
-                        <li id='2'></li>
-                        <li id='3'></li>
-                        <li id='4'></li>
-                        <li id='5'></li>
-                        <li id='6'></li>
-                        <li id='7'></li>
-                        <li id='8'></li>
-                        <li id='9'></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-xs-0 col-md-1"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-0 col-md-1"></div>
+      <div class="col-xs-12 col-md-10">
+        <div class="search-result">
+          <ul>
+            <li id='0'></li>
+            <li id='1'></li>
+            <li id='2'></li>
+            <li id='3'></li>
+            <li id='4'></li>
+            <li id='5'></li>
+            <li id='6'></li>
+            <li id='7'></li>
+            <li id='8'></li>
+            <li id='9'></li>
+          </ul>
         </div>
+      </div>
+      <div class="col-xs-0 col-md-1"></div>
     </div>
-    <!-- Custom Script -->
-    <script src="script.js" type="text/javascript"></script>
+  </div>
+
+  <!-- Footer section of the page -->
+  <footer class="text-center">
+    <div id="footer">
+      <i class="fa fa-code"></i> by <a href="https://twitter.com/MdAbuZafar19">Zafar</a>
+    </div>
+  </footer>
+
+  <!-- Custom Script -->
+  <script src="script.js" type="text/javascript"></script>
 </div>
 </body>
 </html>
